// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="sc-AxjAm gKsgiq"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="sc-AxjAm betTky"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a primary color 1`] = `
<div>
  <div
    class="sc-AxjAm gKsgiq"
    color="primary"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="sc-AxjAm fxkZZe"
    color="primary"
  />
</div>
`;
